# data-anonymiser

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-windows.yml  test.yml
packaging/: data_anonymizer.spec
samples/: feed_sample.xml  medical_patient_sample.xml  siui_report_sample.xml
src/data_anonymizer/: __init__.py  export_naming.py  method_guidance.py  models.py
src/data_anonymizer/adapters/: __init__.py  base.py  registry.py  xml_adapter.py
src/data_anonymizer/core/: __init__.py  engine.py  methods.py  rules.py
src/data_anonymizer/desktop/: __init__.py  app.py  main_window.py  theme.py
tests/: test_adapters.py  test_export_path.py  test_method_guidance.py  test_methods.py
