[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "data-anonymizer"
version = "0.2.0"
description = "Desktop app to anonymize XML files — select fields, preview, export a new file"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Zenaios" }]
keywords = ["anonymization", "xml", "desktop", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = ["PySide6>=6.6"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
build = ["pyinstaller>=6.0"]

[project.scripts]
data-anonymizer = "data_anonymizer.desktop.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
